--- a/FinancialAid/Localizable.strings
+++ b/FinancialAid/Localizable.strings
@@ -9,3 +9,10 @@
 "Network failure, please pull to refresh." = "网络错误，请刷新重试";
 "Tips" = "填表帮助";
 "Fill form" = "填写表格";
+"Please input your name" = "请输入用户名";
+"Please input your password" = "请输入密码";
+"Login" = "登录";
+"Register" = "注册";
+"Office of Student Financial Aid" = "北京大学学生资助中心";
+"This field cannot be empty" = "此项不能为空";
+"This field is not in the correct format" = "格式有误，请重新输入";
