--- a/FinancialAid/Localizable.strings
+++ b/FinancialAid/Localizable.strings
@@ -17,16 +17,20 @@
 "This field cannot be empty" = "此项不能为空";
 "This field is not in the correct format" = "格式有误，请重新输入";
 "Username or password is incorrect" = "用户名或密码错误";
-"Network timeout" = "网络错误，请重试";
+"Network timeout" = "网络超时，请重试";
 "Edit portrait" = "上传头像";
 "Open camera" = "拍照";
 "Open album" = "打开相册";
 "Cancel" = "取消";
-"Save" = "保存";
 "Change password" = "修改密码";
+"User name" = "用户名";
 "Male" = "男";
 "Female" = "女";
 "Gender" = "性别";
 "Birthday" = "生日";
 "Phone number" = "电话号码";
 "Email" = "邮箱";
+"Server error occurred" = "网络错误";
+"You have not filled the form" = "您尚未完成表格";
+"Email address is not valid, please update in personal center" = "邮箱不合法，请在个人中心设置";
+"The PDF is sent to your email address" = "PDF已发送至您的邮箱，请查收";
