finished image upload

--- a/FinancialAid/Localizable.strings
+++ b/FinancialAid/Localizable.strings
@@ -34,3 +34,4 @@
 "You have not filled the form" = "您尚未完成表格";
 "Email address is not valid, please update in personal center" = "邮箱不合法，请在个人中心设置";
 "The PDF is sent to your email address" = "PDF已发送至您的邮箱，请查收";
+"Upload image success" = "照片上传成功";
