--- a/FinancialAid/Localizable.strings
+++ b/FinancialAid/Localizable.strings
@@ -35,3 +35,7 @@
 "Email address is not valid, please update in personal center" = "邮箱不合法，请在个人中心设置";
 "The PDF is sent to your email address" = "PDF已发送至您的邮箱，请查收";
 "Upload image success" = "照片上传成功";
+"Delete image success" = "删除照片成功";
+"Privilege error" = "您没有权限";
+"Can not find image" = "找不到照片";
+"Clear cache success" = "清理缓存成功";
