--- a/FinancialAid/Localizable.strings
+++ b/FinancialAid/Localizable.strings
@@ -21,6 +21,7 @@
 "Edit portrait" = "上传头像";
 "Open camera" = "拍照";
 "Open album" = "打开相册";
+"Confirm" = "确认";
 "Cancel" = "取消";
 "Change password" = "修改密码";
 "User name" = "用户名";
@@ -32,7 +33,8 @@
 "Email" = "邮箱";
 "Server error occurred" = "网络错误";
 "You have not filled the form" = "您尚未完成表格";
-"Email address is not valid, please update in personal center" = "邮箱不合法，请在个人中心设置";
+"Please input the email" = "请输入要发送的邮箱";
+"Email address is not valid, please update in personal center" = "邮箱不合法，请重新输入";
 "The PDF is sent to your email address" = "PDF已发送至您的邮箱，请查收";
 "Upload image success" = "照片上传成功";
 "Delete image success" = "删除照片成功";
