add message center

--- a/FinancialAid/Localizable.strings
+++ b/FinancialAid/Localizable.strings
@@ -9,6 +9,7 @@
 "Network failure, please pull to refresh." = "网络错误，请刷新重试";
 "Tips" = "填表帮助";
 "Fill form" = "填写表格";
+"My Message" = "我的消息";
 "Please input your SID" = "请输入学号";
 "Default password is birthday" = "初始密码为8位生日";
 "Login" = "登录";
